# phana

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README  disp.cpp  dynmat.cpp  dynmat.h  global.h  green.cpp  green.h  input.cpp  input.h  interpolate.cpp  interpolate.h  kpath.cpp  kpath.h  memory.h  phonon.cpp  phonon.h  phonopy.cpp  phonopy.h  qnodes.cpp  qnodes.h  version.h  version.h.in
libs/: README  tricubic-1.0.tgz
linalg/: CMakeLists.txt  linalg.h  xerbla.cpp
precompiled/: README  pha_g++9  phana_linux
tools/: generate_map.py
tricubic/: CMakeLists.txt  coeff.h  libtricubic.cpp  ltricubic_utils.h  tricubic.h  tricubic_utils.cpp
